2007-12-08  Andreas Kirschbaum

	* Add format specifier to 'meta_element' skin command.

	* Implement 'dialog_state' skin command to record the visibility
	of dialogs.

	* Remove 'label_picture' skin command; add 'label_html' skin
	command to display HTML content; change 'label_text' to not
	interpret HTML content.

	* Implement "low food" warning: displays a symbol above the player
	if food drops below 100.

	* Add support for checkbox gui elements.
	- Add client-side command (set <option> <state>) to set an option
	  manually.
	- Implement skin commands 'def checkbox', 'def checkbox_option',
	  and 'checkbox'.

2007-12-07  Andreas Kirschbaum

	* Make shift+numpad direction keys work.

	* Make ENTER and SPACE select the default action in dialogs. For
	books "close dialog", in quit dialog "disconnect", in metaserver
	and start dialogs "connect".

	* Generalize spellbelt into shortcuts: a shortcut can hold either
	a spell or a command.

	* Add open/close button to log window.

2007-12-06  Andreas Kirschbaum

	* Implement client-side command 'exec' to execute skin command
	lists. Allow to execute client-side commands through key bindings.

	* Raise dialogs when clicked.

	* Store settings and caches in ~/.crossfire/jxclient.

2007-12-04  Andreas Kirschbaum

	* Add --debug-gui option to highlight all GUI elements. Useful
	only for skin development.

	* Fall back to default skin when a custom skin cannot be loaded.

2007-12-02  Andreas Kirschbaum

	* Add hpbar right above the player.

	* Add "really disconnect?" dialog when ESC is pressed.

	* ESC aborts bind/unbind command.

	* Do not crash at application termination when using -N.

	* Automatically open magic map view when a new magic map is
	available.

	* In server selection dialog, make ENTER in hostname field execute
	"Connect".

2007-11-30  Andreas Kirschbaum

	* Correctly display negative stat values.

2007-09-17  Andreas Kirschbaum

	* Fix out of memory errors due to face cache. Now unused faces are