@@ -1,5 +1,7 @@
 2007-12-08  Andreas Kirschbaum
 
+	* Implement cursor for text input fields.
+
 	* Add format specifier to 'meta_element' skin command.
 
 	* Implement 'dialog_state' skin command to record the visibility
